--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "postcss-html": "^1.3.0",
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.2.1",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "stylelint": "^14.1.0",
     "stylelint-config-recommended": "^6.0.0",
     "stylelint-webpack-plugin": "^3.1.0",
